Fix text color of selected attribute (was black on blue instead of white on blue)

--- a/src/ae_attribute_inspector/css/index.css
+++ b/src/ae_attribute_inspector/css/index.css
@@ -113,6 +113,7 @@ textarea.editable {
     margin: 0;
     overflow-y: auto;
     resize: vertical; /* not supported in IE<=11 */
+    color: inherit; /* Inherit text color when parent element (tr) is selected */
 }
 
 
